force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/Zuora__SubscriptionProductCharge__c.object-meta.xml
<CustomObject>
    <label>Subscription Product &amp; Charge</label>
    <nameField>
        
        <label>Subscription Charge Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Subscription Product &amp; Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>