force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/ClientOwner__c.field-meta.xml
<CustomField>
    <fullName>ClientOwner__c</fullName>
    <inlineHelpText>Client, as set in Zuora</inlineHelpText>
    <label>ClientOwner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>