force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <inlineHelpText>Project, as set in Zuora</inlineHelpText>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>