force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Account__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N40000001lGjTEAU</relationshipName>
    <type>Lookup</type>
</CustomField>