force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ChargeNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ChargeNumber__c</fullName>
    <description>The charge number for this charge.</description>
    <label>Charge Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>