force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProductName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProductName__c</fullName>
    <label>Product Name (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>