force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Subscription__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Subscription__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Zuora__Subscription__c</referenceTo>
    <relationshipLabel>Subscription Product &amp; Charges</relationshipLabel>
    <relationshipName>Subscription_Product_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>