force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__SubscriptionChargeNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SubscriptionChargeNumber__c</fullName>
    <externalId>true</externalId>
    <label>Subscription Charge Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>