force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__SubscriptionRatePlanChargeName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SubscriptionRatePlanChargeName__c</fullName>
    <label>Subscription Rate Plan Charge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>