force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Type__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>One-Time</fullName>
                
                
                    <label>One-Time</label>
                
                </value>
            
                <value>
                
                    <fullName>Recurring</fullName>
                
                
                    <label>Recurring</label>
                
                </value>
            
                <value>
                
                    <fullName>Usage</fullName>
                
                
                    <label>Usage</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>