force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Version__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Version__c</fullName>
    <description>The version of the rate plan charge. Each time a charge is amended, Zuora creates a new version of the rate plan charge.</description>
    <label>Version</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>